colors and typos

--- a/colors.sty
+++ b/colors.sty
@@ -3,3 +3,17 @@
 \definecolor{lightblue}{rgb}{0.145,0.6666,1}
 \definecolor{darkgray}{gray}{0.40}
 \definecolor{darkgreen}{cmyk}{0.7705,0.0000,1.0000,0.2824}
+
+\definecolor{ctublue}{cmyk}{100, 43, 0, 0}
+\definecolor{ctulightblue}{rgb}{172, 214, 238}
+\colorlet{ctubluetext}{ctublue}
+\colorlet{ctubluerule}{ctulightblue}
+\colorlet{ctubluedarkbg}{white}
+\colorlet{ctubluedarkfg}{ctublue!50!black}
+\colorlet{ctubluedot}{white}
+\colorlet{ctubluebg}{white}
+\colorlet{ctulstbg}{ctubluebg}
+\colorlet{ctublueitemi}{ctublue}
+\colorlet{ctublueitemii}{ctulightblue}
+\colorlet{ctugray}{gray}
+\definecolor{ctuorange}{Hsb}{22, 0.5, 1}
