--- a/sourcecode.sty
+++ b/sourcecode.sty
@@ -40,13 +40,13 @@ frame=l,
 framesep=4.5mm,
 framexleftmargin=2.5mm,
 fillcolor=\color{numberlightgray},
-rulecolor=\color{blue},
+rulecolor=\color{NavyBlue},
 }
 
 \lstdefinelanguage{Java}
 {
 keywords={instanceof, new, true, false, catch, return, null, catch, switch, if, while, do, else, case, break, class, implements, extends, import, public, private, static, protected, void, int, float, double},
-keywordstyle=\color{blue},
+keywordstyle=\color{NavyBlue},
 stringstyle=\color{darkgreen},
 comment=[l]{//},
 commentstyle=\color{jsgray}\ttfamily,
@@ -63,14 +63,14 @@ morestring=[b]",
 morestring=[s]{>}{<},
 morecomment=[s]{<?}{?>},
 stringstyle=\color{black},
-identifierstyle=\color{blue},
+identifierstyle=\color{NavyBlue},
 keywordstyle=\color{javared},
 morekeywords={xmlns,version,prefix,name,objectName,propertyName,type,value}% list your attributes here
 }
 
 \lstdefinelanguage{JavaScript}{
 keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, const, let, try},
-keywordstyle=\color{blue}\bfseries,
+keywordstyle=\color{NavyBlue}\bfseries,
 ndkeywords={class, export, boolean, throw, implements, import, this},
 ndkeywordstyle=\color{jsdarkgray}\bfseries,
 identifierstyle=\color{black},
@@ -94,20 +94,20 @@ morecomment=[s]{/*}{*/},
 commentstyle=\color{purple}\ttfamily,
 moredelim=[l][\color{orange}]{\&},
 moredelim=[l][\color{magenta}]{*},
-moredelim=**[is][\color{blue}]{\%\%}{\%\%},
+moredelim=**[is][\color{NavyBlue}]{\%\%}{\%\%},
 morestring=[b]',
 morestring=[b]",
 }
 
 \lstdefinelanguage{Dockerfile}{
 keywords={FROM,RUN,WORKDIR,COPY},
-keywordstyle=\color{blue},
+keywordstyle=\color{NavyBlue},
 sensitive=true,
 }
 
 \lstdefinelanguage{Python}{
 keywords={def,class,for,in,import,from,pass,return},
-keywordstyle=\color{blue},
+keywordstyle=\color{NavyBlue},
 sensitive=true,
 moredelim=[is][\textcolor{javapurple}]{\%\%}{\%\%},
 morestring=[b]',
@@ -117,7 +117,7 @@ stringstyle=\color{darkgreen},
 
 \lstdefinelanguage{Drools}{
 keywords={rule,dialect,when,then,end},
-keywordstyle=\color{blue},
+keywordstyle=\color{NavyBlue},
 sensitive=true,
 morestring=[b]',
 morestring=[b]",
