improve chapter 1 first paragraph

--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -5,11 +5,11 @@
 %\goal{Informační systémy a jejich důležitost}
 Informační systémy se ve 21. století staly neodmyslitelnou součástí našich každodenních životů.
 Do styku s nimi přicházíme jak při výkonu našich povolání, tak ve volném čase. Usnadňují
-řadu aspektů našich činností. Jejich využití sahá do mnoha sektorů, od vzdělání a vědy,
-kde mimo jiné významně usnadňují přístup ke studijním materiálům, přes zdravotnictví,
-kde pomáhají zvyšovat efektivitu a úroveň péče o pacienty~\cite{fichman2011editorial}, až po
-sociální sítě, kde umožňují lidem globálně komunikovat a sdílet své myšlenky, pocity a zážitky.
-Jedním z úkolů výzkumu v oblasti softwarového inženýrství je zjednodušení a zefektivnění procesu
+řadu našich činností, od vzdělání a vědy, kde umožňují snadný přístup ke studijním materiálům,
+přes zdravotnictví, kde pomáhají zvyšovat efektivitu a úroveň péče o pacienty~\cite{fichman2011editorial},
+až po sociální sítě, kde umožňují lidem globálně komunikovat a sdílet své myšlenky, pocity a zážitky.
+Očekávání na kvalitu a množství funkcí informačních systémů se zvyšuje každým rokem.
+Jedním z úkolů výzkumu v oblasti softwarového inženýrství je zjednodušení a zefektivnění
 vývoje informačních systémů. Díky tomu budou tyto systémy moci splňovat stále rostoucí množství požadavků.
 
 %\goal{SOA}
