--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -40,7 +40,7 @@ kdy náklady na manuální duplikaci pravidel přesáhnou cenu za návrh a využ
 \section{Budouc\'{\i} rozšiřitelnost frameworku}
 
 Navržený framework podporuje budoucí rozšíření o další moduly a funkce, které
-dále zvýší jeho schopnost znovupoužití byzynsových pravidel v \gls{SOA}.
+dále zvýší jeho schopnost znovupoužití byznysových pravidel v \gls{SOA}.
 Díky svobodné licenci \gls{MIT} může framework kdokoliv volně používat a modifikovat.
 
 \subsection{Univerzální doménově specifický jazyk}
@@ -100,7 +100,7 @@ a zabránit tak poškozením dat v systému, či jiným závažným chybám.
 %\goal{Naplnění požadavků ze zadání}
 V rámci této práce byly dosaženy cíle stanovené v úvodu práce a byly splněny všechny
 požadavky zadání. Nejprve bylo analyzováno využití, vyjádření a znovupoužití
-byzynsových pravidel v \gls{SOA} a byly identifikovány potenciální problémy a z nich vyplývající požadavky
+byznysových pravidel v \gls{SOA} a byly identifikovány potenciální problémy a z nich vyplývající požadavky
 na framework navržený v této práci. Dále byla provedena rešerše vhodných architektur,
 paradigmat a nástrojů, které by mohly být použity pro řešení těchto problémů, včetně stávajících
 frameworků pro reprezentaci byznysových pravidel a jejich výhod a nevýhod. Na základě analýzy a
