protobuf listing color fixed

--- a/protobuf/style.sty
+++ b/protobuf/style.sty
@@ -24,7 +24,7 @@
   belowcaptionskip=1\baselineskip,
   backgroundcolor=\color{proto_background},
   basicstyle=\color{proto_basic}\footnotesize\ttfamily,
-	keywordstyle=[1]\color{proto_keyword},
+	keywordstyle=[1]\color{NavyBlue},
 	keywordstyle=[2]\color{proto_type},
 	keywordstyle=[3]\color{proto_options},
 	commentstyle=\color{proto_comment},
