reorganize example system domain model figure

--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -194,7 +194,7 @@ kompletn\'{\i} doménov\'y model ukázkového systému.
     \item \textbf{\code{Address}} je entita popisuj\'{\i}c\'{\i} dodac\'{\i} či fakturačn\'{\i} adresu.
 \end{itemize}
 
-\begin{figure}[ht]
+\begin{figure}[t]
     \centering
     \includegraphics[keepaspectratio=true, width=0.9\linewidth]{figures/example-model.pdf}
     \caption{Doménový model ukázkového e-commerce systému}
